--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,7 +13,7 @@
                 <div class="accordion accordion-flush" id="accordionFlushExample4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne4">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" 
                                 data-bs-target="#flush-collapseOne4" aria-expanded="false"
                                 aria-controls="flush-collapseOne4">
                             <h5>Postgraduate AI Projects 2024</h4>
@@ -23,7 +23,7 @@
 
                     <div id="flush-collapseOne4" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body text-primary">
                             "I finished my AI program at Centennial College. As part of my learning experience, I will be working on personal projects to keep learning and have been updating my AI knowledge."
                         </div>
 
@@ -101,7 +101,7 @@
 
                     <div id="flush-collapseOne1" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body text-primary">
                             "As part of my learning experience at Centennial College, I developed these projects.
                             However, the AI project is particularly focused on what can be next to benefit the
                             community."
@@ -230,7 +230,7 @@
                     <div id="flush-collapseOne2" class="accordion-collapse collapse" aria-labelledby="headingOne"
                     data-bs-parent="#accordionFlushExample">
 
-                    <div class="accordion-body">
+                    <div class="accordion-body text-primary">
                         "Due to the pandemic, I was compelled to create a tool to help our customers maintain
                         distance between mechanics and operators. The app was developed to monitor the wear of
                         heavy equipment components during pre-operational inspections by operators. This application won a Digital Transformation Award in 2021."
@@ -298,7 +298,7 @@
                     </div>
                     <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body text-primary">
                             "Over the course of more than fifteen years working as a technical global supporter for the
                             Spanish-speaking
                             Latin America region, I have been involved in numerous projects. Among the most significant
