fix cards to the center projects.ejs

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -28,7 +28,7 @@
                         </div>
 
                         <!-- Projects grid -->
-                        <div class="row align-items-stretch">
+                        <div class="row justify-content-center align-items-stretch">
                             <div class="row">
                                 <!-- Kotlin Dimensions Project -->
                                 <div class="col-md-4 mb-4">
@@ -108,7 +108,7 @@
                         </div>
 
                         <!-- Projects grid -->
-                        <div class="row align-items-stretch">
+                        <div class="row justify-content-center align-items-stretch">
                             <div class="row">
                                 <!-- Brain tumor detection Project -->
                                 <div class="col-md-4 mb-4">
@@ -235,7 +235,7 @@
                         distance between mechanics and operators. The app was developed to monitor the wear of
                         heavy equipment components during pre-operational inspections by operators. This application won a Digital Transformation Award in 2021."
                     </div>
-                    <div class="row align-items-stretch">
+                    <div class="row justify-content-center align-items-stretch">
                         <div class="row">
                             <!-- Kiruwear App -->
                             <div class="col-md-4 mb-4">
@@ -304,7 +304,7 @@
                             Latin America region, I have been involved in numerous projects. Among the most significant
                             are the following:"
                         </div>
-                        <div class="row align-items-stretch">
+                        <div class="row justify-content-center align-items-stretch">
                             <div class="row">
 
                                 <!-- Argentina -->
