fix phone number contact.ejs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -54,7 +54,7 @@
                                                     <p class="mb-0">Full Name</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="mb-0 fw-bold">Juan Bibiano Arevalo Ruiz</p>
+                                                    <p class="mb-0 text-light">Juan Bibiano Arevalo Ruiz</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -63,7 +63,7 @@
                                                     <p class="mb-0">Email</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="mb-0 fw-bold">jbaruz@gmail.com</p>
+                                                    <p class="mb-0 text-light">jbaruz@gmail.com</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -72,7 +72,7 @@
                                                     <p class="mb-0">Mobile</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="mb-0 fw-bold">(01) 437-557-6885</p>
+                                                    <p class="mb-0 text-light">(01) 437-557-6885</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -81,7 +81,7 @@
                                                     <p class="mb-0">Address</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="mb-0 fw-bold">Etobicoke Area, Toronto, Ontario, CA</p>
+                                                    <p class="mb-0 text-light">Etobicoke Area, Toronto, Ontario, CA</p>
                                                 </div>
                                             </div>
                                         </div>
