fix phone number contact.ejs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -71,9 +71,10 @@
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Mobile</p>
                                                 </div>
+                                                <meta name="format-detection" content="telephone=no">
                                                 <div class="col-sm-9">
-                                                    <p class="mb-0 text-light">(01) 437-557-6885</p>
-                                                </div>
+                                                    <p class="mb-0 text-light"><span>(01) 437-557-6885</span></p>
+                                                </div>                                               
                                             </div>
                                             <hr>
                                             <div class="row">
