Fix button resume contact.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -47,7 +47,7 @@
                             With a heart set on continuous learning and an eye for detail, I am always on the lookout for the next challenge, the next problem to solve.
                         </p>
                         <div class="text-center mt-4">
-                            <a href="../assets/archives/Resume_Juan_Arevalo_2024.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">View Resume (PDF)</a>
+                            <a href="../assets/archives/Resume_Juan_Arevalo_2024.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light">View Resume (PDF)</a>
 
                         </div>
                     </div>
