Add two links more

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 12-09-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
@@ -47,9 +47,9 @@
                         <!-- Add animated link section -->
                         <div class="animated-link-container">
                             <a href="/about" class="animated-link">About me</a>
+                            <a href="/contact" class="animated-link">Contact</a>
                             <a href="/projects" class="animated-link">Projects</a>
-                            <a href="/contact" class="animated-link">Contact me</a>
-                            <a href="/link" class="animated-link">Important Links</a>
+                            <a href="/link" class="animated-link">Links</a>
                         </div>
                     </div>
                     <img src="../assets/images/logo1.png" class="img-fluid mx-auto d-block w-25" alt="Tech award photo">
