--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 12-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
                 <h2 class="text-center mb-4 text-light">Important Links</h2>
@@ -667,6 +667,18 @@
                                         <i class="fa-brands fa-github card-img mt-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
+                                            <h5 class="card-title">Building-Data-Driven-Applications-with-LlamaIndex-RAG</h5>
+                                            <a href="https://github.com/PacktPublishing/Building-Data-Driven-Applications-with-LlamaIndex" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
                                             <h5 class="card-title">Hands-On-Genetic-Algorithms</h5>
                                             <a href="https://github.com/PacktPublishing/Hands-On-Genetic-Algorithms-with-Python-Second-Edition" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
@@ -912,6 +924,19 @@
                         <!-- ... Certification ... -->
                         <div class="tab-pane fade" id="category8" role="tabpanel" aria-labelledby="category8-tab">
                             <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-aws card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">AWS skillbuilder</h5>
+                                            <a href="https://skillbuilder.aws/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
