--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,6 +1,6 @@
-<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 12-09-2024 -->
+<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 16-09-2024 -->
 
-<nav class="navbar navbar-expand-lg navbar-light vh100 bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark vh100 bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="..\assets\images\logo1.png" class="img-thumbnail rounded-square ms-4" alt="Logo Juan"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav ml-auto mx-2">
 
-                <li class="nav-item  <%= title === 'Home' ? 'active' : '' %>">
+                <li class="nav-item <%= title === 'Home' ? 'active' : '' %>">
                     <a class="nav-link active" href="/"><i class="fa-solid fa-house"></i> Home </a>
                 </li>
 
@@ -39,7 +39,7 @@
                     <input class="form-control me-1 bg-secondary" type="text" name="q" placeholder="Search... on you.com"
                     aria-label="Search">
                     <input type="hidden" name="sitesearch" value="you.com">
-                    <button class="btn btn-outline-dark" type="submit">Search</button>
+                    <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
             </div>
         </div>
