Modify Bootom_nav better view links

--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,21 +1,26 @@
-<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 16-09-2024 -->
 <footer class="foot d-flex align-items-center text-secondary w-100">
     <nav class="navbar bg-black w-100">
         <div class="container-fluid">
             <div class="row w-100">
                 <!-- Left Section: Links -->
-                <div class="col-md-6 text-start">
+                <div class="col-md-4 col-12 text-md-start text-center">
                     <ul class="list-unstyled">
                         <li><a href="/" class="text-secondary text-decoration-none">Home</a></li>
                         <li><a href="/about" class="text-secondary text-decoration-none">About me</a></li>
-                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact</a></li>                        
+                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact</a></li>  
+                    </ul>
+                </div>
+
+                <div class="col-md-4 col-12 text-md-start text-center">
+                    <ul class="list-unstyled">
                         <li><a href="/projects" class="text-secondary text-decoration-none">Projects</a></li>
                         <li><a href="/link" class="text-secondary text-decoration-none">Links</a></li>
                     </ul>
-                </div>
+                </div>        
                 
                 <!-- Right Section: Social Media Icons & Language Change -->
-                <div class="col-md-6 text-end">
+                <div class="col-md-4 col-12 text-md-end text-end mt-md-0 mt-3">
                     <!-- Social Media Icons -->
                     <a href="https://www.linkedin.com/in/jbaruz" class="me-2" target="_blank"><i class="fab fa-linkedin text-secondary"></i></a>
                     <a href="https://github.com/jbaruz" class="me-2" target="_blank"><i class="fab fa-github text-secondary"></i></a>
