--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -12,7 +12,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-4 col-12 text-md-start text-center">
+                <div class="col-md-4 col-12 text-md-between text-center">
                     <ul class="list-unstyled">
                         <li><a href="/projects" class="text-secondary text-decoration-none">Projects</a></li>
                         <li><a href="/link" class="text-secondary text-decoration-none">Links</a></li>
@@ -20,7 +20,7 @@
                 </div>        
                 
                 <!-- Right Section: Social Media Icons & Language Change -->
-                <div class="col-md-4 col-12 text-md-end text-end mt-md-0 mt-3">
+                <div class="col-md-4 col-12 text-md-end text-end mt-md-0 mt-2">
                     <!-- Social Media Icons -->
                     <a href="https://www.linkedin.com/in/jbaruz" class="me-2" target="_blank"><i class="fab fa-linkedin text-secondary"></i></a>
                     <a href="https://github.com/jbaruz" class="me-2" target="_blank"><i class="fab fa-github text-secondary"></i></a>
@@ -32,7 +32,7 @@
             </div>
 
             <!-- Copyright -->
-            <div class="row w-100 mt-3">
+            <div class="row w-100 mt-2">
                 <div class="col-12 text-center">
                     <p class="fs-6 fst-italic mb-0">&copy; 2024 All rights reserved by Jbaruz</p>
                 </div>
