Improve color to become aesthetic

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 
-<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 17-09-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron bg-gradient-light text-center">
@@ -33,7 +33,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card shadow-sm bg-primary">
-                    <div class="card-header text-light">
+                    <div class="card-header text-light text-opacity-50">
                         Who I am?
                     </div>
                     <div class="card-body text-light">
