--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 17-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-center text-light">
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="col-lg-8">
                                     <div class="card mb-4 bg-primary">
-                                        <div class="card-body text-light">
+                                        <div class="card-body text-light text-opacity-50">
                                             <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Full Name</p>
