--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,18 +27,18 @@
                 <div class="col-md-8">
                     <div class="card mb-4 shadow-sm bg-primary">
                         <div class="card-body text-light">
-                            <h2 class="card-title">Hi, I'm Juan!</h2>
-                            <h5 class="mt-4">Mission Statement</h5>
+                            <h2 class="card-title text-light text-opacity-75">Hi, I'm Juan!</h2>
+                            <h5 class="mt-4 text-light text-opacity-50">Mission Statement</h5>
                             <blockquote class="blockquote">
                                 <p>"Challenging oneself in life is the best way to keep evolving; nothing is ever too late when you decide to be the owner of the results in your life."</p>
-                                <footer class="blockquote-footer bg-primary text-black">Jbaruz</footer>
+                                <footer class="blockquote-footer bg-primary text-black text-opacity-75">Jbaruz</footer>
                             </blockquote>
                             <blockquote class="blockquote">
                                 <p>“Learning to code is learning to create and innovate.”</p>
-                                <footer class="blockquote-footer bg-primary text-black">Enda Kenny, Taoiseach, <cite title="Source Title">Ireland</cite></footer>
+                                <footer class="blockquote-footer bg-primary text-black text-opacity-75">Enda Kenny, Taoiseach, <cite title="Source Title">Ireland</cite></footer>
                                 <p class="personal-reflection">This quote embodies my journey from traditional engineering to AI, emphasizing my belief in continuous growth.</p>
                             </blockquote>
-                            <p class="mt-3">Thank you for visiting!</p>
+                            <p class="mt-3 text-light text-opacity-50">Thank you for visiting!</p>
                         </div>
                     </div>
                 </div>
