Improve color title bootstrap opcacity-75

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
-            <h1 class="display-4 text-light">Embarking on an AI Odyssey!</h1>
+            <h1 class="display-4 text-light text-opacity-75">Embarking on an AI Odyssey!</h1>
             <h2 class="subtitle text-secondary">Blending Traditional Engineering with Cutting-Edge AI Innovation</h2>
 
             <!-- Add this line where you want to display the last updated date -->
