--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron bg-gradient-light text-center">
-            <h1 class="display-7 text-light">About Juan Arevalo</h1>
+            <h1 class="display-7 text-light text-opacity-75">About Juan Arevalo</h1>
         </div>
 
         <div class="row mt-5">
