--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
         <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 17-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-4 float-sm-start">
-                <div class="jumbotron text-center text-light">
+                <div class="jumbotron text-center text-light text-opacity-75">
                     <h1 class="display-7">Welcome to the <%=title%> page</h1>
                 </div>
                 <div class="d-flex flex-sm-row flex-column py-5 text-light">
