--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,10 +1,10 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 12-09-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
-                <h2 class="text-center mb-4 text-light">Important Links</h2>
+                <h2 class="text-center mb-4 text-light text-opacity-75">Important Links</h2>
 
                 <div class="container mt-5">
 
