Add quotes in Index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 17-09-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
@@ -28,15 +28,14 @@
                     <div class="card mb-4 shadow-sm bg-primary">
                         <div class="card-body text-light">
                             <h2 class="card-title text-light text-opacity-75">Hi, I'm Juan!</h2>
-                            <h5 class="mt-4 text-light text-opacity-50">Mission Statement</h5>
+                            <h5 class="mt-4 text-light text-opacity-50">Esential Quotes</h5>
                             <blockquote class="blockquote">
-                                <p>"Challenging oneself in life is the best way to keep evolving; nothing is ever too late when you decide to be the owner of the results in your life."</p>
-                                <footer class="blockquote-footer bg-primary text-black text-opacity-75">Jbaruz</footer>
+                                <p>"Experience is the name everyone gives to their mistakes"</p>
+                                <p class="blockquote-footer bg-primary text-black text-opacity-75 text-center">Oscar Wilde, Irish Playwright</p>
                             </blockquote>
                             <blockquote class="blockquote">
-                                <p>“Learning to code is learning to create and innovate.”</p>
-                                <footer class="blockquote-footer bg-primary text-black text-opacity-75">Enda Kenny, Taoiseach, <cite title="Source Title">Ireland</cite></footer>
-                                <p class="personal-reflection">This quote embodies my journey from traditional engineering to AI, emphasizing my belief in continuous growth.</p>
+                                <p>“Our Character is what we do when we think no one is looking.”</p>
+                                <p class="blockquote-footer bg-primary text-black text-opacity-75 text-center">H. Jackson Brown Jr., Author, <cite title="Source Title">Life's Little Instruction Book</cite></p>
                             </blockquote>
                             <p class="mt-3 text-light text-opacity-50">Thank you for visiting!</p>
                         </div>
