--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 
-<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 17-09-2024 -->
+<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron bg-gradient-light text-center">
@@ -12,7 +12,7 @@
             <div class="col-md-3">
                 <div class="card mb-4 shadow-sm bg-dark text-info">
                     <img src="../assets/images/juan1.jpeg" alt="Juan photo" class="card-img-top w-100">
-                    <div class="card-body">
+                    <div class="card-body bg-black">
                         <h5 class="card-text text-center">Juan Arevalo</h5>
                         <p class="text-center">
                             <div class="text-center">
@@ -36,7 +36,7 @@
                     <div class="card-header text-light text-opacity-50">
                         Who I am?
                     </div>
-                    <div class="card-body text-light">
+                    <div class="card-body text-light bg-primary">
                         <p class="roboto mb-3">
                             Emerging from a rich heritage of software development and metallurgical engineering, I am a passionate multilingual professional with a zeal for technology and its intersection with real-world problems. My expertise spans from wear abrasion problem analysis to the vibrant realms of Artificial Intelligence. This unique blend empowers me to craft solutions that are both innovative and grounded.
                         </p>
