--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 17-09-2024 -->
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-center text-light text-opacity-75">
@@ -8,7 +8,7 @@
                 </div>
                 <div class="d-flex flex-sm-row flex-column py-5 text-light">
                     <div class="p-2 flex-fill">
-                        <div class="card-body text-center">
+                        <div class="card-body text-center bg-black">
                             <img src="../assets/images/juan.png" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3">Juan Arevalo</h5>
                             <p class=" text-secondary mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
@@ -21,7 +21,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <div class="card-body p-0">
+                                    <div class="card-body p-0 bg-black">
                                         <ul class="list-group list-group-flush rounded-3">
                                             <li
                                             class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="col-lg-8">
                                     <div class="card mb-4 bg-primary">
-                                        <div class="card-body text-light text-opacity-50">
+                                        <div class="card-body text-light text-opacity-50 bg-primary">
                                             <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Full Name</p>
