--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="card mb-4 shadow-sm bg-primary">
-                        <div class="card-body text-light">
+                        <div class="card-body text-light bg-primary">
                             <h2 class="card-title text-light text-opacity-75">Hi, I'm Juan!</h2>
                             <h5 class="mt-4 text-light text-opacity-50">Esential Quotes</h5>
                             <blockquote class="blockquote">
