Add new pages to deploy and percentage features

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
+<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 21-09-2024 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,6 +12,7 @@
     <meta name="google-site-verification" content="qFDrxzTf437MAo4rhygK-L5hKwfq5Z70flF0nk4whss" />
     <!-- css section -->
     <link rel='stylesheet' href='/content/app.css' />
+    <link rel='stylesheet' href='/content/photo.css' />  <!--Add to works on photografy.ejs page-->
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
     <link rel="stylesheet" href="/content/starwars.css">
