--- a/views/photografy.ejs
+++ b/views/photografy.ejs
@@ -1,10 +1,10 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
-<!-- Filename: services.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
+<!-- Filename: photografy.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
 <div class="d-flex justify-content-center bg-light">
 <main class="container py-4">
     <div class="jumbotron text-between">
-        <h1 class="display-7">Welcome to the <%=title%></h1>
+        <h1 class="display-7">Welcome to the <%=title%> page as hobby</h1>
     </div>
     <div class="container bootstrap snippets bootdey py-5">
         <section id="services" class="current">
@@ -13,6 +13,11 @@
                     <div class="row text-center py-3">
                         <div class="col-sm-12 col-md-12 col-md-12">
                             <h2>What I Offer</h2>
+                            <div class="photo-img">
+                                <img src="../assets/photos/tree.jpg" style="width: 218px;" alt="Logo Kotlin project">
+
+                            </div>
+
                             <p>With over 18 years of experience in wear abrasion solutions and a veteran in large mining equipment loaders, I offer unparalleled expertise combined with the latest in AI advancements.</p>
                         </div>
 
