--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 21-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
 
@@ -43,6 +43,9 @@
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Kotlin, Android Studio </p>
                                             <p><strong>Status:</strong> 1 Phase - Research </p>
+                                            <div class="progress" style="height: 20px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -58,6 +61,9 @@
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Python, PyCharm, OpenAI, NLP, LLM </p>
                                             <p><strong>Status:</strong> Test - 1st Demo version</p>
+                                            <div class="progress" style="height: 20px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -174,6 +180,7 @@
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Languages:</strong> Python</p>
                                             <p><strong>Status:</strong> In progress - first step</p>
+
                                         </div>
                                     </div>
                                 </div>
