--- a/views/photografy.ejs
+++ b/views/photografy.ejs
@@ -14,7 +14,7 @@
                         <div class="col-sm-12 col-md-12 col-md-12">
                             <h2>What I Offer</h2>
                             <div class="photo-img">
-                                <img src="../assets/photos/tree.jpg" style="width: 218px;" alt="Logo Kotlin project">
+                                <img src="../assets/photos/tree.JPG" style="width: 218px;" alt="Life Tree">
 
                             </div>
 
