Improve links page

--- a/views/photografy.ejs
+++ b/views/photografy.ejs
@@ -31,8 +31,10 @@
                                             <div class="ico fa fa-hard-hat highlight fa-xl"></div>
                                             <div class="text-block">
                                                 <div class="name fw-bold py-2">Mining Equipment Expertise</div>
-                                                <div class="info fst-italic">Deep Knowledge in Wear Control</div>
-                                                <div class="text fw-light">Veteran in wear abrasion solutions for loaders like P&H4100XPC, CAT7495, and more. Extensive experience in weld lip installations and understanding wear control for ground-engaging tools of shovels.</div>
+                                                <div class="photo-img">
+                                                    <img src="../assets/photos/tree.JPG" style="width: 218px;" alt="Life Tree">
+                    
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -41,8 +43,10 @@
                                             <div class="ico fa fa-cogs highlight fa-xl"></div>
                                             <div class="text-block">
                                                 <div class="name fw-bold py-2">Project Management</div>
-                                                <div class="info fst-italic">Solving Complex Problems</div>
-                                                <div class="text fw-light">18+ years in Latin America's leading mines, creating value and addressing intricate challenges with renowned reputation in the industry.</div>
+                                                <div class="photo-img">
+                                                    <img src="../assets/photos/tree.JPG" style="width: 218px;" alt="Life Tree">
+                    
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
