Add -blank to open search result in another browser

--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -35,11 +35,11 @@
                 </li>
             </ul>
             <div class="mx-5 border-left border-light"></div>
-                <form class="d-flex" action="https://you.com/search" method="get">
+                <form class="d-flex" action="https://you.com/search" method="get" target="_blank">
                     <input class="form-control me-1 bg-secondary" type="text" name="q" placeholder="Search... on you.com"
                     aria-label="Search">
                     <input type="hidden" name="sitesearch" value="you.com">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
+                    <button class="btn btn-outline-light"  type="submit">Search</button>
                 </form>
             </div>
         </div>
